// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CapsuleModule Capsule 
        redux-assist itself has already been tested.
        Validate that it works in this context.
         verify that state updates on the component and that state is mapped to props 1`] = `
<div>
  {
    "name": null,
    "logged_in": false
}
</div>
`;

exports[`CapsuleModule Capsule 
        redux-assist itself has already been tested.
        Validate that it works in this context.
         verify that state updates on the component and that state is mapped to props 2`] = `
<div>
  {
    "name": "Joe Dirt",
    "logged_in": true
}
</div>
`;

exports[`CapsuleModule Capsule 
        redux-assist itself has already been tested.
        Validate that it works in this context.
         verify that state updates on the component and that state is mapped to props 3`] = `
<div>
  {
    "name": null,
    "logged_in": false
}
</div>
`;

exports[`CapsuleModule Capsule logic verify that logic can be mapped to props. (must provide logic_name namespace) 1`] = `
<div>
  <p>
     prop:
    login
  </p>
  <p>
     prop:
    logout
  </p>
</div>
`;

exports[`CapsuleModule CapsuleProvider should provide theme 1`] = `
<div
  className={
    Object {
      "classes": Object {
        "title": "ThemedComponent-title-0-2-1",
      },
      "theme": Object {
        "color": Object {
          "dark": "#252336",
          "light": "#93ccdc",
        },
      },
    }
  }
>
  hello
</div>
`;

exports[`CapsuleModule CapsuleProvider should provide to props. 1`] = `
<div>
  {"provide_to_props":"asdf"}
</div>
`;

exports[`CapsuleModule CapsuleProvider should should render without crashing. no config, should still pass props 1`] = `
<div>
  {"test":"no config"}
</div>
`;
